# comp2resp

./: .gitignore  Cargo.toml  README.md  test.sh
src/: app.rs  config.rs  error.rs  lib.rs  main.rs  observability.rs  state.rs  upstream.rs
src/openai/: chat.rs  responses.rs
src/routes/: chat_completions.rs  health.rs  responses.rs
src/translate/: request.rs  response.rs  stream.rs
tests/: integration.rs
